objects/POC_Request__c/fields/Vanity_URL_Formula__c.field-meta.xml
<CustomField>
    <fullName>Vanity_URL_Formula__c</fullName>
    <description>The formula used in the field is:
CASESAFEID( Related_Contact__c) &amp; &quot;.cloud.tanium.com&quot;</description>
    <formula>CASESAFEID( Related_Contact__c) &amp; &quot;.cloud.tanium.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field is populated with a formula:
CASESAFEID( Related_Contact__c) &amp; &quot;.cloud.tanium.com&quot;</inlineHelpText>
    <label>Vanity URL Formula</label>
    <type>Text</type>
</CustomField>