objects/POC_Request__c/fields/X5_Min_Time_Trigger__c.field-meta.xml
<CustomField>
    <fullName>X5_Min_Time_Trigger__c</fullName>
    <description>Used for Time-Dependent Workflow Actions - 5 minute delay.</description>
    <formula>CreatedDate-0.038</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 Min Time Trigger</label>
    <type>DateTime</type>
</CustomField>