objects/POC_Request__c/recordTypes/HFPOC.recordType-meta.xml
<RecordType>
    <fullName>HFPOC</fullName>
    <active>true</active>
    <description>For use with HFPOC initiative.</description>
    <label>HFPOC</label>
</RecordType>