objects/POC_Request__c/recordTypes/Live_Lab_Environment_POC.recordType-meta.xml
<RecordType>
    <fullName>Live_Lab_Environment_POC</fullName>
    <active>true</active>
    <description>For Live Lab Environment POCs</description>
    <label>Live Lab Environment POC</label>
</RecordType>