objects/POC_Request__c/recordTypes/Partner_On_Prem.recordType-meta.xml
<RecordType>
    <fullName>Partner_On_Prem</fullName>
    <active>true</active>
    <description>For partner-run on-prem POCs (Partner Internal, IR, Assessment, MSP End User)</description>
    <label>Partner: On-Prem</label>
</RecordType>