objects/POC_Request__c/recordTypes/Partner_Tanium_Cloud.recordType-meta.xml
<RecordType>
    <fullName>Partner_Tanium_Cloud</fullName>
    <active>true</active>
    <description>For partner-run Tanium Cloud POCs (Partner Internal, IR, Assessment, MSP End User). Term is limited by POC Category: Partner Internal - 120 days, Assessment - 90 days, IR - 120 days, MSP End User - 60 days</description>
    <label>Partner: Tanium Cloud</label>
</RecordType>