objects/POC_Request__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>For customer-run on-prem POCs; also applies to assessments where a partner will be involved</description>
    <label>Customer: On-Prem</label>
</RecordType>