objects/POC_Request__c/recordTypes/TaaS.recordType-meta.xml
<RecordType>
    <fullName>TaaS</fullName>
    <active>true</active>
    <description>For customer-run Tanium Cloud POCs</description>
    <label>Customer: Tanium Cloud</label>
</RecordType>