objects/POC_Request__c/validationRules/Duration_Days_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Days_2</fullName>
    <active>false</active>
    <description>[Validation rule without promotion factor]. when there is no promotion this rule should be active. 
Partner:01260000000Q6hS
Client:01260000000Q6hN
Prospect:0120e000000DxkXAAS</description>
    <errorConditionFormula>(AND
(Account__r.RecordTypeId =&apos;01260000000Q6hS&apos;,
OR(Duration__c &lt; 1, Duration__c &gt; 60), ISPICKVAL( Tanium_Infrastructure__c , &quot;Yes – Tanium as a Service&quot;)))
||
(AND
(Account__r.RecordTypeId &lt;&gt; &apos;01260000000Q6hS&apos;,
OR(Duration__c &lt; 1, Duration__c &gt; 30),
NOT(ISPICKVAL(Primary_Solution_Area__c,&quot;Vulnerability&quot;)),
 ISPICKVAL( Tanium_Infrastructure__c , &quot;Yes – Tanium as a Service&quot;)))
||
AND(Account__r.RecordTypeId &lt;&gt; &apos;01260000000Q6hS&apos;, 
(OR(Duration__c &lt; 1, Duration__c &gt; 45)),
ISPICKVAL( Tanium_Infrastructure__c , &quot;Yes – Tanium as a Service&quot;),
ISPICKVAL(Primary_Solution_Area__c,&quot;Vulnerability&quot;)
)</errorConditionFormula>
    <errorDisplayField>Duration__c</errorDisplayField>
    <errorMessage>For TaaS, # days must fall between 1 - 60 for Partner accounts, For Customers 1-30, When Vulnerability as Primary solution area it should be between 1 - 45.</errorMessage>
</ValidationRule>