objects/POC_Request__c/validationRules/Led_Partner_SE_Leading_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Led_Partner_SE_Leading_Empty</fullName>
    <active>true</active>
    <description>The Contact of Partner SE Leading should be cleared unless the POC is led by Partner.  You may need to update the POC Led By field.</description>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Standard&quot; || RecordType.DeveloperName = &quot;TaaS&quot;) &amp;&amp;
NOT(ISPICKVAL(POC_Led_By__c, &quot;Partner&quot;)) &amp;&amp; NOT(ISBLANK(Contact_of_Partner_SE_Leading__c)) &amp;&amp; (isNew() || DATEVALUE( CreatedDate ) &gt; DATEVALUE(&quot;2023-08-10&quot;))</errorConditionFormula>
    <errorDisplayField>Contact_of_Partner_SE_Leading__c</errorDisplayField>
    <errorMessage>The Contact of Partner SE Leading should be cleared unless the POC is led by Partner.  You may need to update the POC Led By field.</errorMessage>
</ValidationRule>