objects/POC_Request__c/validationRules/Led_Partner_SE_Shadow_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Led_Partner_SE_Shadow_Required</fullName>
    <active>true</active>
    <description>The Contact of Partner SE Shadowing is required when the POC is being shadowed by a partner.</description>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Standard&quot; || RecordType.DeveloperName = &quot;TaaS&quot;) &amp;&amp; ISPICKVAL(POC_Shadowing__c, &quot;Partner&quot;) &amp;&amp; ISBLANK(Contact_of_Partner_SE_Shadowing__c) &amp;&amp; (isNew() || DATEVALUE( CreatedDate ) &gt; DATEVALUE(&quot;2023-08-10&quot;))</errorConditionFormula>
    <errorDisplayField>Contact_of_Partner_SE_Shadowing__c</errorDisplayField>
    <errorMessage>Please specify Contact of Partner SE Shadowing</errorMessage>
</ValidationRule>