objects/POC_Request__c/validationRules/Led_Partner_SE_Shadowing_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Led_Partner_SE_Shadowing_Empty</fullName>
    <active>true</active>
    <description>The Contact of Partner SE Shadowing should be cleared unless the POC is being shadowed by a Partner.  You may need to update the POC Shadowing field.</description>
    <errorConditionFormula>(RecordType.DeveloperName = &quot;Standard&quot; || RecordType.DeveloperName = &quot;TaaS&quot;) &amp;&amp; NOT(ISPICKVAL(POC_Shadowing__c, &quot;Partner&quot;)) &amp;&amp; NOT(ISBLANK(Contact_of_Partner_SE_Shadowing__c)) &amp;&amp; (isNew() || DATEVALUE( CreatedDate ) &gt; DATEVALUE(&quot;2023-08-10&quot;))</errorConditionFormula>
    <errorDisplayField>Contact_of_Partner_SE_Shadowing__c</errorDisplayField>
    <errorMessage>The Contact of Partner SE Shadowing should be cleared unless the POC is being shadowed by a Partner.  You may need to update the POC Shadowing field.</errorMessage>
</ValidationRule>