objects/POC_Request__c/validationRules/Prerequisite_for_Engage.validationRule-meta.xml
<ValidationRule>
    <fullName>Prerequisite_for_Engage</fullName>
    <active>true</active>
    <description>Engage cannot be selected unless Performace is selected.</description>
    <errorConditionFormula>AND (
OR (!Performance__c),
Engage__c)</errorConditionFormula>
    <errorMessage>Engage may only be selected if Performance is also selected.</errorMessage>
</ValidationRule>