objects/POC_Request__c/validationRules/Prevent_Special_Characters_for_Subdomain.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Special_Characters_for_Subdomain</fullName>
    <active>true</active>
    <description>Used for subdomain field to prevent use of special characters.</description>
    <errorConditionFormula>NOT(REGEX( Subdomain__c , &quot;^[a-zA-Z0-9-.]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Subdomain__c</errorDisplayField>
    <errorMessage>Alphanumeric only, no special characters.</errorMessage>
</ValidationRule>