objects/POC_Request__c/validationRules/Prevent_Special_Chars_for_Vanity_url.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Special_Chars_for_Vanity_url</fullName>
    <active>false</active>
    <description>Prevent_Special_Chars_for_Vanity_url</description>
    <errorConditionFormula>AND(
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;Tanium System Administrator&apos;,
NOT(ISBLANK(Vanity_URL__c)),
NOT(REGEX( Vanity_URL__c , &quot;(([a-zA-Z0-9&apos;-]+))&quot;)))


/*
AND($Profile.Name != &apos;System Administrator&apos;,
NOT(ISBLANK(Vanity_URL__c))
,NOT(REGEX( Vanity_URL__c , &quot;(([a-zA-Z0-9&apos;-]+))&quot;)))
*/</errorConditionFormula>
    <errorDisplayField>Vanity_URL__c</errorDisplayField>
    <errorMessage>Special chars not allowed except hyphens in Vanity field</errorMessage>
</ValidationRule>