objects/POC_Request__c/validationRules/Promo_Endpoint_Hardening.validationRule-meta.xml
<ValidationRule>
    <fullName>Promo_Endpoint_Hardening</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Promotion__c , &quot;Endpoint Hardening&quot;),
(Patch__c  &lt;&gt; TRUE  || Deploy__c  &lt;&gt; TRUE)
)</errorConditionFormula>
    <errorDisplayField>Promotion__c</errorDisplayField>
    <errorMessage>If Promo = Endpoint Hardening, then Deploy and Patch must be selected.</errorMessage>
</ValidationRule>