objects/POC_Request__c/validationRules/Required_Fields_for_Provision.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_for_Provision</fullName>
    <active>true</active>
    <description>Require Deploy when Provision is selected.</description>
    <errorConditionFormula>AND(!Deploy__c,
Provision__c
)</errorConditionFormula>
    <errorMessage>If Provision is selected then Deploy must also be selected.</errorMessage>
</ValidationRule>