objects/POC_Request__c/validationRules/To_verify_that_the_account_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>To_verify_that_the_account_selected</fullName>
    <active>true</active>
    <description>To verify that the account selected on the POC object matches the same account the opportunity is associated with.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Account__r.Name)),
Account__r.Name !=  Opportunity__r.Account.Name,
NOT(ISPICKVAL( POC_Category__c ,&quot;Partner Internal&quot;)),
DateValue(CreatedDate)&gt;=  DATE(2023,08,10), 
NOT($Permission.DisableValidationRules)
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>The account associated with the Opportunity and the Account on the POC doesn&apos;t match. Please map the account which is associated with the Opportunity.</errorMessage>
</ValidationRule>