objects/POC_Request__c/validationRules/Validation_for_POC_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_POC_Category</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Opportunity__c ),
OR(
ISPICKVAL( POC_Category__c , &apos;IR&apos;),
ISPICKVAL( POC_Category__c , &apos;Assessment&apos;),
ISPICKVAL( POC_Category__c , &apos;MSP End User&apos;)
),

NOT($Permission.DisableValidationRules)
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>You must select an Opportunity when POC Category is IR, Assessment, or MSP End User.</errorMessage>
</ValidationRule>