objects/POC_Request__c/validationRules/Validation_for_POC_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_POC_Type</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(Account__r.RecordType.DeveloperName = &apos;Partner&apos;), ISPICKVAL( POC_Type__c ,&apos;Partner IR/Assessment&apos;) )</errorConditionFormula>
    <errorMessage>Please update the POC Type.  &quot;Partner IR/Assessment&quot; is reserved for Partner accounts.</errorMessage>
</ValidationRule>