objects/POC_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Server_Deployment_Infrastructure__c</columns>
    <columns>Server_Names__c</columns>
    <columns>Server_Deployment_Type__c</columns>
    <columns>Approval_Stage__c</columns>
    <columns>End_Date_Today__c</columns>
    <columns>End_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>