objects/POC_Request__c/listViews/Channel_Ops_POC_Request.listView-meta.xml
<ListView>
    <fullName>Channel_Ops_POC_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Channel Ops</label>
    <queue>Channel_Ops</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>