objects/POC_Request__c/listViews/HFPOC.listView-meta.xml
<ListView>
    <fullName>HFPOC</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>POC_Request__c.HFPOC</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>HFPOC</label>
</ListView>