objects/POC_Request__c/listViews/Live_Lab_Environment_Queue_POC_Request.listView-meta.xml
<ListView>
    <fullName>Live_Lab_Environment_Queue_POC_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Live Lab Environment Queue</label>
    <queue>Live_Lab_Environment_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>